<resources>
    <string name="app_name">GAADS LEADERBOARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_screen_gads_logo">welcome_screen_gads_logo]</string>
    <string name="placeholder">Placeholder</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="connection_lost_message">Opps!! Connection lost.\n\n Check connection and refresh the page</string>
</resources>