<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.ProjectSubmissionActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="246dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toEndOf="@+id/submission_activity_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gads_logo" />

    <ImageView
        android:id="@+id/submission_activity_back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/project_submission"
        android:textColor="#FDB962"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/submission_first_name"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/input_corner_radius"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/submission_last_name"
        android:layout_width="168dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_corner_radius"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:text="@string/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/submission_first_name"
        app:layout_constraintTop_toTopOf="@+id/submission_first_name" />

    <EditText
        android:id="@+id/submission_email_address"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_corner_radius"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:text="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission_first_name" />

    <EditText
        android:id="@+id/submission_github_link"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_corner_radius"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:text="@string/project_on_github_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission_email_address" />

    <Button
        android:id="@+id/project_submission_button"
        android:layout_width="287dp"
        android:layout_height="71dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_gradient_background"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission_github_link" />


</androidx.constraintlayout.widget.ConstraintLayout>